--- a/application.properties
+++ b/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://db4free.net:3306/kikpup
 spring.datasource.username=kikupuser
 spring.datasource.password=Darsh@2022
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql = false
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 management.endpoints.web.exposure.include=hystrix.stream,*
 spring.security.oauth2.client.registration.google.client-id=491287719570-vv9ah00llkebe1ggtnlhtl2i713101tk.apps.googleusercontent.com
