--- a/application.properties
+++ b/application.properties
@@ -19,7 +19,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.sleuth.sampler.percentage=1.0
 spring.sleuth.web.skipPattern=(^cleanup.*)
 
-app.url.list= http://localhost:8089/user,https://github.com/prashantjangam/config-repo
+app.url.list= http://localhost:8089/user,https://github.com/prashantjangam/config-repo,http://localhost:8888/application/default
 
 # EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
