--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/kikup
 server.port=8080
 spring.profiles.active=@profileActive@
-spring.application.name=kikup app
+spring.application.name=kikup app demo
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://db4free.net:3306/kikpup
